--- a/src/styles.css
+++ b/src/styles.css
@@ -96,3 +96,11 @@ body {
   background-color: hsl(180deg 100% 91%);
   color: hsl(180deg, 63%, 42%);
 }
+
+.button-list {
+  padding: 0.5rem;
+  border-radius: 12px;
+  background-color: white;
+  padding: 2rem;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
