all button in chrome editor

--- a/src/styles.css
+++ b/src/styles.css
@@ -98,12 +98,7 @@ body {
   background-color: white;
   padding: 2rem;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-}
 
-.no-wrap {
-  flex-wrap: no-wrap;
-}
-
-.wrap {
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
